
public static class BP_StrDefiner
{
    //Animator;
    public const string AniNextStepTrigger_str = "NextStep";
    public const string AniFinishedTrigger_str = "Finished";
    public const string AniToCheckPoint_str = "ToCheckPoint";
    //Object;
    public const string DataController_name = "BP_DataController";
    public const string RC_name = "ReferenceController";
    //Tag;
    public const string Bubble_indi_tag_str = "BP_BubbleAimI";
}
